Add virtual threads to the benchmarks